Use different base image take 4.

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <vertx.version>3.4.2</vertx.version>
     <vertx-maven-plugin.version>1.0.8</vertx-maven-plugin.version>
     <vertx.verticle>io.openshift.booster.HttpApplication</vertx.verticle>
-    <fabric8.generator.from>172.30.98.11:5000/sgehwolf-jenkins/java-8-openjdk-32:1.0</fabric8.generator.from>
+    <fabric8.generator.from>docker.io/jerboaa/fabric8-openjdk8-base:0.0.2</fabric8.generator.from>
   </properties>
 
   <dependencyManagement>
